# lightweight_book_recommender

./: .env  .gitignore  README.md  data-exploration.ipynb  db.py  gradio-dashboard.py  pyproject.toml  sentiment_analysis.ipynb  text_classification.ipynb  vector-search.ipynb
chroma_mysql_like_db/d523faf4-df00-45fa-9101-6b6da407269c/: index_metadata.pickle
src/ai_demo_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_demo_testing/: __main__.py
src/ai_demo_testing/chroma_store/: chroma.sqlite3
src/ai_demo_testing/data/: web.txt  设计.md
src/ai_demo_testing/service/: VSFactory.py  llm_factory.py  testcase_sevice.py
src/ai_demo_testing/ui/: chatbot.py
src/ai_demo_testing/utils/: convert.py  log.py
