
[project]
name = "ai_demo_server"
description = "功能测试用例与自动化测试生成平台"
#license = "MIT"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "requests",
    'flask',
    'flask_core',
    'transformers',
    'transformers[agents]',
    'openai',
    'gradio',
    'langchain',
    'importlib-metadata',
    'langchainhub',
    'chromadb',
    'langchain_chroma',
    'langchain_ollama',
    'langchain_community',
    'langchain_classic',
    'langchain_text_splitters',
    'langsmith',
]
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"